# alea-carta-est

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-developer.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yaml
notebooks/: synthetic_experiments.ipynb  train_on_your_own_data.ipynb
python/: data.py
